Made english and dark mode default selection in option

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,30 +1,27 @@
 <!-- popup.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Set Default Language</title>
-  <link rel="stylesheet" href="options.css">
-
-</head>
-<body  id="dark">
-  <div id="main">
-  <h3>Select Default Language</h3>
-  <select id="languageSelect">
-    <option value="en">English</option>
-    <option value="no">Norsk</option>
-    <option value="fr">French</option>
-    <option value="es">Spanish</option>
-
-
-  </select>
-  <h3>Select theme </h3>
-  <select id="themeSelect">
-    <option value="light" selected>Light</option>
-    <option value="dark">Dark</option>
-  </select>
-  <button id="saveButton">Save</button>
-</div>
-  <script src="options.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Set Default Language</title>
+    <link rel="stylesheet" href="options.css" />
+  </head>
+  <body id="dark">
+    <div id="main">
+      <h3>Select Default Language</h3>
+      <select id="languageSelect">
+        <option value="en" selected>English</option>
+        <option value="no">Norsk</option>
+        <option value="fr">French</option>
+        <option value="es">Spanish</option>
+      </select>
+      <h3>Select theme</h3>
+      <select id="themeSelect">
+        <option value="light">Light</option>
+        <option value="dark" selected>Dark</option>
+      </select>
+      <button id="saveButton">Save</button>
+    </div>
+    <script src="options.js"></script>
+  </body>
 </html>
